package exercise3;

public interface Drawable {
	Point[] getVertices();
}
